# Parallel_HW

./: CMakeLists.txt  Makefile  README.md
Cudalaplace/: Makefile  laplace2d.cu
include/: MPILaplace.hpp  simulator.hpp
mpi_hw/: CMakeLists.txt  Makefile  build.sh  main.cpp
src/: MPILaplace.cpp  main.cpp  simulator.cpp
